# ifeval-fc

./: .gitignore  LICENSE  README.md  env.example  evaluate.py  llm_factory.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  format.yml  lint.yml
IFEval_FC/: __init__.py  checkers.py  cli.py  prompts.py  utils.py
data/: analyze_inventory_discrepancy__param_discrepancy_details__fmt_JsonFormatChecker.json  analyze_inventory_discrepancy__param_discrepancy_details__fmt_NAllCapitalWordsChecker.json  analyze_resume_content__param_resume_text__fmt_HighlightedSectionsCountChecker.json  analyze_tour_feedback__param_tour_feedback__fmt_PlaceholderCountChecker.json  analyze_weather_impact__param_activity_description__fmt_QuotationChecker.json  artwork_analysis__param_artwork_description__fmt_HighlightedSectionsCountChecker.json  artwork_analysis__param_artwork_description__fmt_QuotationChecker.json  assess_stress_levels__param_stress_description__fmt_KeywordsPresenceChecker.json  assess_stress_levels__param_stress_description__fmt_WordCountChecker.json  book_hotel_room__param_user_preferences__fmt_CyrillicGreekChecker.json  budget_allocation_advice__param_budget_goals__fmt_WordCountChecker.json  character_profile_creator__param_character_description__fmt_KeywordsPresenceChecker.json  compose_custom_poem__param_theme_description__fmt_NAllCapitalWordsChecker.json  compose_email_response__param_user_query__fmt_KeywordsPresenceChecker.json  compose_email_response__param_user_query__fmt_SentenceCountChecker.json  contract_clause_extraction__param_query_text__fmt_WordCountChecker.json  contract_risk_assessment__param_risk_analysis_input__fmt_LetterFrequencyChecker.json  contract_risk_assessment__param_risk_analysis_input__fmt_SentenceCountChecker.json  craft_job_application__param_user_details__fmt_LetterFrequencyChecker.json  craft_job_application__param_user_details__fmt_NAllCapitalWordsChecker.json  craft_job_application__param_user_details__fmt_NCommasChecker.json  create_custom_meal_plan__param_user_preferences__fmt_KeywordsPresenceChecker.json  create_project_plan__param_project_guidelines__fmt_CyrillicGreekChecker.json  create_project_plan__param_project_guidelines__fmt_KeywordsPresenceChecker.json  create_project_plan__param_project_guidelines__fmt_WordCountChecker.json  create_recipe__param_main_ingredient__fmt_NAllCapitalWordsChecker.json  debug_program_code__param_code__fmt_KeywordFrequencyChecker.json  diagnose_technical_issue__param_extracted_user_problem__fmt_CyrillicGreekChecker.json  diagnose_technical_issue__param_extracted_user_problem__fmt_NCommasChecker.json  diagnose_technical_issue__param_extracted_user_problem__fmt_QuotationChecker.json  evaluate_daily_nutrient_intake__param_consumed_foods__fmt_HighlightedSectionsCountChecker.json  evaluate_daily_nutrient_intake__param_consumed_foods__fmt_LetterFrequencyChecker.json  evaluate_daily_nutrient_intake__param_consumed_foods__fmt_SentenceCountChecker.json  evaluate_energy_efficiency__param_current_setup__fmt_NCommasChecker.json  evaluate_learning_progress__param_user_feedback__fmt_PlaceholderCountChecker.json  evaluate_learning_progress__param_user_feedback__fmt_SpacesInBetweenChecker.json  exhibition_recommendation__param_user_preferences__fmt_KeywordFrequencyChecker.json  exhibition_recommendation__param_user_preferences__fmt_NAllCapitalWordsChecker.json  extract_action_items_from_meeting_notes__param_meeting_notes__fmt_NAllCapitalWordsChecker.json  extract_actionable_items__param_notes_text__fmt_NAllCapitalWordsChecker.json  (+110 more)
scripts/: install_dependencies.sh  lint.sh  view_results.py
tests/: __init__.py  test_checkers.py
